--- a/app/src/main/res/layout/newuser.xml
+++ b/app/src/main/res/layout/newuser.xml
@@ -3,7 +3,6 @@
      xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@color/white"
-    android:layout_gravity="center"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_centerInParent="true"
@@ -40,27 +39,25 @@
             android:layout_width="match_parent"
             android:textAlignment="center"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="43dp"
+            android:layout_marginTop="20dp"
             android:text="@string/titleone"
             android:textSize="24dp" />
         <TextView
+            android:layout_margin="10dp"
+            android:padding="10dp"
             android:id="@+id/politics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/start"
-            android:layout_centerInParent="true"
-             android:text="Políticas de uso e políticas de dados"
+            android:text="Ao prosseguir você concordará com nossas políticas de uso e políticas de dados"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary" />
         <Button
+            android:layout_width="match_parent"
+            android:fontFamily="@font/nunitoblack"
             android:layout_margin="10dp"
              android:id="@+id/start"
-            android:layout_width="wrap_content"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
              android:background="@drawable/ripple_button"
             android:text="Iniciar"
             android:textColor="@color/white" />
