--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -38,7 +38,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:padding="5dp"
@@ -64,6 +64,7 @@
 
 
         <LinearLayout
+            android:padding="5dp"
             android:id="@+id/likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
