--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:animateLayoutChanges="true"
     android:fitsSystemWindows="true"
     android:id="@+id/container">
 
@@ -19,6 +20,7 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:animateLayoutChanges="true"
             android:id="@+id/collapsetoolbar"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
