--- a/app/src/main/res/layout/changename.xml
+++ b/app/src/main/res/layout/changename.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     app:cardBackgroundColor="@color/transparent"
@@ -13,30 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:padding="10dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_edit" />
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/transparent"
-            android:fontFamily="@font/nunitoblack"
-            android:hint="Username"
-            android:maxLength="25"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:textSize="22sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            app:hintEnabled="false"
+            app:counterEnabled="true"
+            app:counterMaxLength="25"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/username"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/lwhite"
+                android:fontFamily="@font/nunito_light"
+                android:hint="Username"
+                android:maxLength="25"
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:textSize="22sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button"
