--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -1,36 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    app:cardBackgroundColor="@color/transparent"
-    android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    android:layout_gravity="center_horizontal"
-    app:cardCornerRadius="25dp"
-    app:cardElevation="0dp"
-    android:orientation="vertical">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="60dp"
-            android:id="@+id/brand"
-            android:layout_height="60dp"
-            android:src="@drawable/penguin"/>
-
-        <TextView
-            android:textStyle="bold"
-            android:layout_margin="15dp"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-             android:id="@+id/brandtext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            android:text="brand" />
-    </LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:textStyle="bold"
+    android:layout_width="match_parent"
+    android:foreground="?attr/selectableItemBackground"
+    android:id="@+id/reference"
+    android:textColor="@color/black"
+    android:textSize="16sp"
+    android:padding="5dp"
+    android:text="@string/reference"
+    android:textAlignment="center"
+    android:layout_height="wrap_content">
 
 
-</androidx.cardview.widget.CardView>
+</TextView>
