--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="1dp"
-    android:foreground="?attr/selectableItemBackground"
-    android:padding="5dp"
-    app:cardBackgroundColor="@color/transparent"
+    android:layout_height="wrap_content"
+     android:foreground="?attr/selectableItemBackground"
+     app:cardBackgroundColor="@color/transparent"
     app:cardCornerRadius="25dp"
     app:cardElevation="0dp">
 
   <TextView
+      android:textStyle="bold"
+      android:padding="10dp"
       android:layout_width="match_parent"
       android:foreground="?attr/selectableItemBackground"
       android:layout_gravity="center"
       android:id="@+id/reference"
-      android:textSize="28sp"
+      android:textSize="16sp"
       android:text="@string/reference"
       android:textAlignment="center"
       android:layout_height="wrap_content" />
