--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,11 +14,14 @@
     </style>
 
     <style name="Settingslist" parent="Widget.AppCompat.TextView">
-        <item name="android:padding">10dp</item>
-        <item name="android:drawablePadding">5dp</item>
+         <item name="android:drawablePadding">5dp</item>
         <item name="android:fontFamily">@font/nunito_light</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+          <item name="android:padding">5dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:foregroundTint">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -48,8 +51,11 @@
     </style>
 
     <style name="BottomOptionstext" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:textColor">@color/black</item>
         <item name="android:padding">5dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:foregroundTint">@color/colorPrimaryDark</item>
     </style>
 
 
