kotlin migration + MVP implementation

--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".ErrorActivity">
+    tools:context=".View.activities.ErrorActivity">
 
     <TextView
         style="@style/TextAppearance.AppCompat.Title"
