--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--<item
         android:id="@+id/search"
-        android:title="Pesquisar"
+        android:title="pesquisar"
         app:showAsAction="always"
         android:icon="@drawable/ic_search_black_24dp" />-->
     <item
