--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,13 +9,13 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-            android:background="@color/grey_100"
-            android:id="@+id/myquotesrecycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        android:id="@+id/myquotesrecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/grey_100"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-            android:paddingEnd="0dp"
-            android:paddingStart="0dp" />
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -45,69 +45,50 @@
             app:expandedTitleGravity="top|center"
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
             android:fitsSystemWindows="true">
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp"
+                app:layout_collapseMode="parallax">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:padding="5dp"
+                    android:text="@string/username"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/posts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="5dp"
+                    android:text="Posts"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profilepic"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:foreground="?attr/selectableItemBackground"
                     android:padding="10dp"
-                    app:layout_collapseMode="parallax">
+                    android:src="@drawable/notfound"
+                    android:tooltipText="Clique na foto para alterá-la"
+                    app:civ_border_color="@color/colorAccent"
+                    app:civ_border_width="1dp" />
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/profilepic"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:layout_gravity="center"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:padding="10dp"
-                        android:src="@drawable/notfound"
-                        android:tooltipText="Clique na foto para alterá-la"
-                        app:civ_border_color="@color/colorAccent"
-                        app:civ_border_width="1dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="5dp">
-
-                        <TextView
-                            android:id="@+id/username"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp"
-                            android:text="@string/app_name"
-                            android:textColor="@color/black"
-                            android:textSize="24sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/posts"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="true"
-                            android:drawableStart="@drawable/ic_brightness_1_black_24dp"
-                            android:drawableTint="@color/colorAccent"
-                            android:padding="5dp"
-                            android:text="Posts" />
-
-                        <TextView
-                            android:id="@+id/likes"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_brightness_1_black_24dp"
-                            android:drawableTint="@color/red_400"
-                            android:padding="5dp"
-                            android:text="Favoritos" />
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
 
                 <Button
                     android:layout_margin="20dp"
