--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,6 +8,14 @@
     android:fitsSystemWindows="true"
     android:id="@+id/container">
 
+    <androidx.viewpager.widget.ViewPager
+        android:alpha="0"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_height="match_parent" />
+
+
     <com.google.android.material.appbar.AppBarLayout
         android:animateLayoutChanges="true"
         android:id="@+id/appbarlayout"
@@ -17,12 +25,14 @@
         android:fitsSystemWindows="true"
         app:elevation="3dp">
 
+
         <androidx.appcompat.widget.Toolbar
-            android:animateLayoutChanges="true"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="top"
+            android:alpha="0"
+            android:animateLayoutChanges="true"
             android:elevation="0dp"
             app:layout_collapseMode="pin"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
@@ -36,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end|center"
+                android:alpha="0"
                 android:animateLayoutChanges="true"
                 android:backgroundTint="@color/grey_50"
                 android:foreground="?attr/selectableItemBackground"
@@ -46,18 +57,17 @@
                 android:id="@+id/profilepic"
                 android:layout_width="45dp"
                 android:layout_height="48dp"
-                android:layout_margin="1dp"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end|center"
-                android:padding="5dp"
+                android:layout_margin="1dp"
                 android:foreground="?attr/selectableItemBackground"
+                android:padding="5dp"
                 android:src="@drawable/penguin"
                 app:civ_border_color="@color/colorPrimaryDark"
                 app:civ_border_width="1dp" />
 
 
         </androidx.appcompat.widget.Toolbar>
-
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:animateLayoutChanges="true"
             android:id="@+id/collapsetoolbar"
@@ -72,7 +82,9 @@
             app:titleEnabled="false">
 
 
+
             <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:alpha="0"
                 android:id="@+id/adView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -84,6 +96,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            android:alpha="0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bottom_line"
@@ -95,13 +108,6 @@
             app:tabTextAppearance="@style/TabsTextStyle"
             app:tabTextColor="@color/grey_400" />
     </com.google.android.material.appbar.AppBarLayout>
-
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        android:layout_height="match_parent" />
 
 
     <com.github.mmin18.widget.RealtimeBlurView
