--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -11,6 +11,7 @@
     android:background="@color/white">
 
     <LinearLayout
+
         android:padding="5dp"
         android:id="@+id/quotedata"
         android:layout_width="match_parent"
@@ -27,20 +28,13 @@
             android:padding="5dp">
 
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_gravity="center"
-                android:foreground="?attr/selectableItemBackground"
-                android:id="@+id/userpic"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_astronaut" />
-
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:alpha="0"
                     android:padding="5dp"
                     android:foreground="?attr/selectableItemBackground"
                     android:fontFamily="@font/nunitoblack"
@@ -51,6 +45,7 @@
                     android:textColor="@color/black"
                     android:textSize="14sp" />
                 <TextView
+                    android:alpha="0"
                     android:id="@+id/dia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -59,14 +54,24 @@
 
             </LinearLayout>
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:alpha="0"
+                android:layout_gravity="center"
+                android:foreground="?attr/selectableItemBackground"
+                android:id="@+id/userpic"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_astronaut" />
+
 
         </LinearLayout>
 
 
         <LinearLayout
+            android:layout_width="match_parent"
             android:padding="5dp"
             android:id="@+id/likes"
-            android:layout_width="wrap_content"
+            android:alpha="0"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -89,6 +94,7 @@
 
 
         <androidx.cardview.widget.CardView
+            android:alpha="0"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="10dp"
             android:id="@+id/background"
@@ -98,12 +104,13 @@
             app:cardElevation="0dp">
 
             <LinearLayout
-                 android:layout_width="match_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
+                    android:alpha="0"
                     android:id="@+id/quote"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -114,6 +121,7 @@
                     android:typeface="normal" />
 
                 <TextView
+                    android:alpha="0"
                     android:id="@+id/author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
